--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -25,6 +25,11 @@
   </repositories>
 
   <dependencies>
+      <dependency>
+          <groupId>com.google.protobuf</groupId>
+          <artifactId>protobuf-java</artifactId>
+          <version>2.5.0</version>
+      </dependency>
 
     <dependency>
       <groupId>com.hubspot</groupId>
