--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -154,6 +154,12 @@
       </exclusions>
     </dependency>
 
+    <dependency>
+      <groupId>org.iq80.snappy</groupId>
+      <artifactId>snappy</artifactId>
+      <version>0.4-SNAPSHOT</version>
+    </dependency>
+  
   </dependencies>
 
   <build>
