--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -28,13 +28,13 @@
     <dependency>
       <groupId>net.kencochrane.raven</groupId>
       <artifactId>raven-logback</artifactId>
-      <version>4.1.2</version>
+      <version>${sentry.version}</version>
     </dependency>    
 
     <dependency>
       <groupId>net.kencochrane.raven</groupId>
       <artifactId>raven-getsentry</artifactId>
-      <version>4.1.2</version>
+      <version>${sentry.version}</version>
     </dependency>    
 
     <dependency>
