--- a/SingularityRunnerBase/pom.xml
+++ b/SingularityRunnerBase/pom.xml
@@ -49,6 +49,12 @@
       <artifactId>logback-classic</artifactId>
       <version>1.1.1</version>
     </dependency>
+    
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-guava</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
 
   </dependencies>
 
