--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -35,7 +35,13 @@
     <dependency>
       <groupId>com.hubspot.dropwizard</groupId>
       <artifactId>dropwizard-guice</artifactId>
-      <version>0.7.0-SNAPSHOT</version>
+      <version>0.7.0</version>
+            <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
