--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -187,6 +187,12 @@
       <artifactId>snappy</artifactId>
       <version>0.4-SNAPSHOT</version>
     </dependency>
+    
+    <dependency>
+      <groupId>net.java.dev.jets3t</groupId>
+      <artifactId>jets3t</artifactId>
+      <version>${jets3t.version}</version>
+    </dependency>
 
   </dependencies>
 
