--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>Singularity</artifactId>
-    <version>0.3.5</version>
+    <version>0.3.6-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
