--- a/SingularityClient/pom.xml
+++ b/SingularityClient/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>Singularity</artifactId>
-    <version>0.3.5</version>
+    <version>0.3.6-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>SingularityBase</artifactId>
-      <version>0.3.5</version>
+      <version>0.3.6-SNAPSHOT</version>
     </dependency>
 
     <dependency>
