--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>com.hubspot</groupId>
   <artifactId>Singularity</artifactId>
-  <version>0.3.5</version>
+  <version>0.3.6-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <repositories>
