--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8</version>
+      </plugin>
     </plugins>
   </build>
 
