--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -108,6 +108,12 @@
       </exclusions>
     </dependency>
 
+      <dependency>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-views-mustache</artifactId>
+          <version>${dropwizard.version}</version>
+      </dependency>
+
     <dependency>
       <groupId>com.hubspot.jackson</groupId>
       <artifactId>jackson-jaxrs-propertyfiltering</artifactId>
