--- a/SingularityExecutor/pom.xml
+++ b/SingularityExecutor/pom.xml
@@ -33,15 +33,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.github.spullara.mustache.java</groupId>
-      <artifactId>compiler</artifactId>
-      <version>0.8.13</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.google.guav</groupId>
-          <artifactId>guava</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>com.github.jknack</groupId>
+      <artifactId>handlebars</artifactId>
+      <version>1.3.1</version>
     </dependency>
 
   </dependencies>
