--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>BaragonCore</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>${baragon.version}</version>
     </dependency>
 
     <dependency>
