--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <guice.version>3.0</guice.version>
     <jets3t.version>0.9.0</jets3t.version>
     <guava.version>15.0</guava.version>
+    <baragon.version>0.1.0-SNAPSHOT</baragon.version> <!-- TODO: use release version of Baragon when complete -->
   </properties>
 
   <groupId>com.hubspot</groupId>
