--- a/SingularityExecutor/pom.xml
+++ b/SingularityExecutor/pom.xml
@@ -37,7 +37,13 @@
       <artifactId>handlebars</artifactId>
       <version>1.3.1</version>
     </dependency>
-
+    
+    <dependency>
+      <groupId>net.java.dev.jets3t</groupId>
+      <artifactId>jets3t</artifactId>
+      <version>${jets3t.version}</version>
+    </dependency>
+    
   </dependencies>
 
   <build>
