--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -26,7 +26,8 @@
     "bootstrap": "~3.2.0",
     "backbone": "~1.1.2",
     "jquery": "1.11.1",
-    "mixen": "https://github.com/HubSpot/mixen/",
-    "moment": "https://github.com/moment/moment/"
+    "mixen": "HubSpot/mixen#b75194b",
+    "moment": "moment/moment#~2.7.0",
+    "sortable": "HubSpot/sortable#~0.6.0"
   }
 }
