--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -1,9 +1,8 @@
 {
-    "author": "Adam Schwartz",
-    "name": "singularityui",
-    "description": "UI for Singularity deploy API",
-    "version": "0.0.1",
-    "homepage": "",
+    "name": "SingularityUI",
+    "description": "UI For the Mesos framework Singularity",
+    "version": "0.3.0",
+    "homepage": "https://github.com/HubSpot/Singularity",
     "repository": {
         "type": "git",
         "url": "git@git.hubteam.com:HubSpot/singularity.git"
@@ -17,7 +16,7 @@
     "dependencies": {
         "javascript-brunch": ">= 1.0 < 1.8",
         "coffee-script-brunch": ">= 1.0 < 1.8",
-        "handlebars-brunch": "git+ssh://git@github.com:HubSpot/handlebars-brunch.git",
+        "handlebars-brunch": "git+https://git@github.com/HubSpot/handlebars-brunch.git",
         "css-brunch": ">= 1.0 < 1.8",
         "stylus-brunch": ">= 1.0 < 1.8",
         "uglify-js-brunch": ">= 1.0 < 1.8",
