--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -25,12 +25,15 @@
   "dependencies": {
     "bootstrap": "~2.3.2",
     "backbone": "~1.1.2",
-    "jquery": "1.11.1",
+    "jquery": "~1.11.1",
     "moment": "moment/moment#~2.7.0",
     "backbone.localstorage": "~1.1.9",
     "zeroclipboard": "~2.1.5",
     "vex": "~2.1.1",
     "messenger": "~1.4.1",
     "typeahead.js": "~0.10.4"
+  },
+  "resolutions": {
+    "jquery": "1.11.1"
   }
 }
