--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -30,7 +30,9 @@
     "zeroclipboard": "~2.1.5",
     "vex": "~2.2.1",
     "messenger": "~1.4.1",
-    "typeahead.js": "~0.10.4"
+    "typeahead.js": "~0.10.4",
+    "backbone.localStorage": "~1.1.9",
+    "underscore": "~1.6.0"
   },
   "resolutions": {
     "jquery": "1.11.1"
@@ -38,6 +40,17 @@
   "overrides": {
     "vex": {
       "main": "js/vex.combined.min.js"
+    },
+    "backbone": {
+      "dependencies": {
+        "jquery": "~1.11.1",
+        "underscore": "~1.6.0"
+      }
+    },
+    "backbone.localStorage": {
+      "dependencies": {
+        "backbone": "~1.1.2"
+      }
     }
   }
 }
