--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -11,6 +11,7 @@
     "start": "brunch watch --server"
   },
   "dependencies": {
+    "bower": "^1.3.8",
     "clean-css-brunch": ">= 1.0 < 1.8",
     "coffee-script-brunch": ">= 1.0 < 1.8",
     "css-brunch": ">= 1.0 < 1.8",
@@ -24,5 +25,8 @@
   "devDependencies": {
     "mocha": "0.14.0",
     "expect.js": "0.1.2"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
