--- a/SingularityUI/bower.json
+++ b/SingularityUI/bower.json
@@ -35,7 +35,8 @@
     "underscore": "~1.6.0"
   },
   "resolutions": {
-    "jquery": "1.11.1"
+    "jquery": "1.11.1",
+    "backbone": "~1.1.2"
   },
   "overrides": {
     "vex": {
