--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -7,8 +7,12 @@
     "type": "git",
     "url": "git@git.hubteam.com:HubSpot/singularity.git"
   },
+  "bin": {
+    "bower": "./node_modules/bower/bin/bower"
+  },
   "scripts": {
-    "start": "brunch watch --server"
+    "start": "brunch watch --server",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "bower": "^1.3.8",
@@ -25,8 +29,5 @@
   "devDependencies": {
     "mocha": "0.14.0",
     "expect.js": "0.1.2"
-  },
-  "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
