--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -7,15 +7,20 @@
     "type": "git",
     "url": "git@git.hubteam.com:HubSpot/singularity.git"
   },
+  "engines": {
+    "node": "~0.10.28"
+  },
   "bin": {
-    "bower": "./node_modules/bower/bin/bower"
+    "bower": "./node_modules/bower/bin/bower",
+    "brunch": "./node_modules/brunch/bin/brunch"
   },
   "scripts": {
     "start": "brunch watch --server",
-    "postinstall": "bower install"
+    "postinstall": "bower install && brunch build"
   },
   "dependencies": {
     "bower": "^1.3.8",
+    "brunch": "^1.7.14",
     "clean-css-brunch": ">= 1.0 < 1.8",
     "coffee-script-brunch": ">= 1.0 < 1.8",
     "css-brunch": ">= 1.0 < 1.8",
