--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -25,7 +25,7 @@
     "clean-css-brunch": ">= 1.0 < 1.8",
     "coffee-script-brunch": ">= 1.0 < 1.8",
     "css-brunch": ">= 1.0 < 1.8",
-    "handlebars-brunch": "git+https://git@github.com/HubSpot/handlebars-brunch.git",
+    "handlebars-brunch": "^1.7.8",
     "javascript-brunch": ">= 1.0 < 1.8",
     "less-brunch": "^1.7.2",
     "sass-brunch": "^1.8.1",
