--- a/pom.xml
+++ b/pom.xml
@@ -373,6 +373,12 @@
         <groupId>com.github.rholder</groupId>
         <artifactId>guava-retrying</artifactId>
         <version>${guava.retry.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
