--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -19,8 +19,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../", "/singularity", type: "nfs"
 
-  config.vm.box = "singularity-develop-0.21.0"
-  config.vm.box_url = "https://hubspot-vagrant-boxes.s3.amazonaws.com/singularity-develop-0.21.0"
+  config.vm.box = "singularity-develop-0.21.0-2"
+  config.vm.box_url = "https://hubspot-vagrant-boxes.s3.amazonaws.com/singularity-develop-0.21.0-2"
 
   config.vm.provider :virtualbox do |vb|
     vb.customize ["modifyvm", :id, "--memory", "1024"]
@@ -84,5 +84,7 @@ Vagrant.configure("2") do |config|
         }
       }
     end
+
+    build.vm.provision :shell, path: "provision_base.sh"
   end
 end
