--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ slave:
     - /var/run/docker.sock:/var/run/docker.sock
 
 singularity:
-  image: ssalinas/singularity:0.4.2
+  image: hubspot/singularity:0.4.2
   net: host
   environment:
     SINGULARITY_MASTER: zk://localhost:2181/mesos
