--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -345,6 +345,7 @@
     <dependency>
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-test</artifactId>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
