--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ slave:
     MESOS_MASTER: zk://localhost:2181/mesos
     MESOS_HOSTNAME: localhost
     MESOS_IP: 127.0.0.1
-    MESOS_CONTAINERIZERS: mesos
+    MESOS_CONTAINERIZERS: docker,mesos
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
     - /sys:/sys
