--- a/SingularityExecutor/pom.xml
+++ b/SingularityExecutor/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <basepom.shaded.main-class>com.hubspot.singularity.executor.SingularityExecutorRunner</basepom.shaded.main-class>
+    <singularitybase.image.revision>1</singularitybase.image.revision>
   </properties>
 
   <dependencies>
@@ -136,7 +137,7 @@
                 <image>
                   <name>hubspot/singularityexecutorslave:${project.version}</name>
                   <build>
-                    <from>hubspot/singularitybase:${mesos.docker.tag}</from>
+                    <from>hubspot/singularitybase:${mesos.docker.tag}-${singularitybase.image.revision}</from>
                     <maintainer>platform-infrastructure-groups@hubspot.com</maintainer>
                     <cmd>
                       <exec>
